crates/executor/src/tests/sql/dml/snapshots/merge_into/query_merge_into_on_false_with_empty_source.snap
---
source: crates/executor/src/tests/sql/dml/merge_into.rs
description: "\"SELECT COUNT(*) as row_count FROM embucket.public.manifest\""
info: "Setup queries: CREATE TABLE embucket.public.manifest (model VARCHAR, last_success TIMESTAMP); MERGE INTO manifest m USING (SELECT CAST(NULL AS VARCHAR) as model, CAST('1970-01-01' AS TIMESTAMP) as last_success WHERE FALSE) s ON (FALSE) WHEN NOT MATCHED THEN INSERT (model, last_success) VALUES (s.model, s.last_success)"
---
Ok(
    [
        "+-----------+",
        "| row_count |",
        "+-----------+",
        "| 0         |",
        "+-----------+",
    ],
)
